--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "browser-router": "^0.2.0",
+    "nav-bar": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-marquee": "^1.2.3",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^3.0.4",
     "react-vertical-timeline-component": "^3.5.2",
