--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jiitopticachapter.github.io/JSCOP4.0",
   "name": "jscop",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "browser-router": "^0.2.0",
+    "gh-pages": "^3.2.3",
     "nav-bar": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,8 +33,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
