--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "browser-router": "^0.2.0",
+    "framer-motion": "^6.2.8",
     "nav-bar": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-marquee": "^1.2.3",
+    "react-icomoon": "^2.4.9",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
