--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
@@ -21,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-marquee": "^1.2.3",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^3.0.4",
