--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
@@ -12,6 +15,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "babel-plugin-macros": "^3.1.0",
     "browser-router": "^0.2.0",
     "framer-motion": "^6.2.8",
     "nav-bar": "^1.0.3",
