--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jscop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://http://jiitopticachapter.com/",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -19,6 +20,7 @@
     "babel-plugin-macros": "^3.1.0",
     "browser-router": "^0.2.0",
     "framer-motion": "^6.2.8",
+    "gh-pages": "^3.2.3",
     "nav-bar": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -33,8 +35,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
