--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "babel-plugin-macros": "^3.1.0",
     "browser-router": "^0.2.0",
     "framer-motion": "^6.2.8",
-    "gh-pages": "^3.2.3",
     "nav-bar": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,10 +34,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
