--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "jscop",
+  "name": "JSCOP",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://http://jiitopticachapter.com/",
+  "homepage": "https://jiitopticachapter.com/JSCOP",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
