--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "JSCOP",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jiitopticachapter.com/JSCOP",
+  "homepage": "https://jiitopticachapter.com/JSCOP4.0",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -58,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
