--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "jscop",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://jiitopticachapter.github.io/",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -37,9 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +57,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    
   }
 }
