--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-easy-marquee": "^1.2.3",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^3.0.4",
@@ -55,7 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
